پہلا کمٹ: مکمل پروجیکٹ شامل کیا

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ author_email = your.email@example.com
 description = A Python Markdown parser and converter
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/yourusername/python-markdown
+url = https://github.com/almushafe/python-markdown.git
 license = MIT
 classifiers =
     Programming Language :: Python :: 3
